Commit: mudanças no css

--- a/MeuPrimeiroSite/portfolio.html
+++ b/MeuPrimeiroSite/portfolio.html
@@ -16,8 +16,8 @@
       <ul>
         <li><a href="#sobre">Sobre</a></li>
         <li><a href="#projetos">Projetos</a></li>
+         <li><a href="#painel-heroi">Painel do Herói</a></li>
         <li><a href="#contato">Contato</a></li>
-        <li><a href="#painel-heroi">Painel do Herói</a></li>
       </ul>
     </nav>
   </header>
@@ -27,21 +27,20 @@
       <h2>Sobre Mim</h2>
       <br>
       <img src="fotobya3.JPG" alt="Foto do herói" width="400" height="300">
-      <br><br
+      <br>
       <p>Olá! Meu nome é Beatryz da Silva Pina. Curso Eng. de Software na UnB desde 2025, sou integrante da EJ Orc'estra e estou começando minha jornada no desenvolvimento web. Possuo muita vontade de crescer no ramo e aprimorar meus conhecimentos</p>
     </section>
 
     <section id="projetos">
-        <br>
       <h2>Meus Projetos</h2>
       <br>
-      <table border="1" class="lista-projetos">
+      <table class="lista-projetos">
         <tr>
           <th>Projeto</th>
           <th>Descrição</th>
           <th>Link</th>
         </tr>
-        <tr class="card-projeto">
+        <tr>
           <td>Meu Primeiro Site </td>
           <td>Página criada no treinamento de HTML </td>
           <td><a href="meuprimeirosite.html">Ver</a></td>
@@ -50,7 +49,6 @@
             <td>Automação com Python</td>
             <td>Criação de um código para autamação de tarefas, principalmente dados </td>
             <td>---</td>
-
         </tr>
       </table>
     </section>
@@ -84,7 +82,7 @@
         <label for="mensagem">Mensagem</label><br>
         <textarea class=botao-primario id="mensagem" name="mensagem" rows="4" cols="30" placeholder="Digite aqui..."></textarea>
         <br><br>
-        <button  type="submit">Enviar</button>
+        <button type="submit">Enviar</button>
       </form>
     </section>
   </main>
