--- a/MeuPrimeiroSite/portfolio.html
+++ b/MeuPrimeiroSite/portfolio.html
@@ -57,19 +57,19 @@
     <section id="painel-heroi">
         <br>
       <h2>Painel do Herói</h2>
-      <p>Aqui futuramente você verá sua ficha dinâmica com HTML + CSS + JavaScript.</p>
       <!-- Exemplo de estrutura estática, que será animada no módulo de JS -->
       <ul>
         <li>Nome: <span id="hero-nome">Beatryz da Silva Pina</span></li>
         <li>Classe: <span id="hero-classe">Aspirante a Dev</span></li>
         <li>Nível: <span id="hero-nivel">1</span></li>
-        <li>XP: <span id="hero-xp">0</span></li>
+        <li>XP: <span id="hero-xp"></span></li>
       </ul>
+      <button id="btn-xp" class="botao-primario">+XP</button>
       <br><br>
     </section>
      <section id="contato">
         <br>
-      <h2 style="text-align: center; color:#fffbdc">Entre em contato!</h2>
+      <h2>Entre em contato!</h2>
       <form action="#" method="POST">
         <label for="nome">Nome</label>
         <br>
@@ -90,5 +90,6 @@
   <footer>
     <p>© 2026 Beatryz Pina. Todos os direitos reservados.</p>
   </footer>
+  <script src="main.js"></script>
 </body>
 </html>
